# custom-plot-lab

./: .gitignore  CMakeLists.txt  GraphDataGrid.cpp  GraphDataGrid.h  README.md  Sandbox.cpp  Sandbox.h  custom-plot-lab.pri  main.cpp  qcpl_axis.cpp  qcpl_axis.h  qcpl_axis_factor.cpp  qcpl_axis_factor.h  qcpl_axis_ticker.cpp  qcpl_axis_ticker.h  qcpl_colors.cpp  qcpl_colors.h  qcpl_consts.h  qcpl_cursor.cpp  qcpl_cursor.h  qcpl_cursor_panel.cpp  qcpl_cursor_panel.h  qcpl_export.cpp  qcpl_export.h  qcpl_format.cpp  qcpl_format.h  qcpl_format_axis.cpp  qcpl_format_axis.h  qcpl_format_editors.cpp  qcpl_format_editors.h  qcpl_format_graph.cpp  qcpl_format_graph.h  qcpl_format_legend.cpp  qcpl_format_legend.h  qcpl_format_plot.cpp  qcpl_format_plot.h  qcpl_format_title.cpp  qcpl_format_title.h  qcpl_graph.cpp  qcpl_graph.h  (+18 more)
qcustomplot/: CMakeLists.txt  qcustomplot.cpp  qcustomplot.cpp.patch  qcustomplot.h  qcustomplot.h.patch  sharedlib.pro
